--- a/dashboard/app/globals.css
+++ b/dashboard/app/globals.css
@@ -73,6 +73,12 @@
     --sidebar-border: #334155;
     --sidebar-ring: #ef4444;
   }
+  .maplibregl-popup-content {
+    @apply bg-transparent! shadow-none! p-0! rounded-none!;
+  }
+  .maplibregl-popup-tip {
+    @apply hidden!;
+  }
 }
 
 @layer base {
